--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
        <div class="sla2"> <!-- navbr -->  
-        <img src="/fotos/logotipopo.png" alt="." id="logotipo">    
+        <img src="./fotos/logotipopo.png" alt="." id="logotipo">    
          <h2>
             SuperPatas
          </h2>
