--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <link rel="icon" href="/fotos/logotipopo.png"> 
-    
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="icon" href="./fotos/logotipopo.png"> 
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SuperPatas</title>
@@ -82,7 +80,7 @@
 
 
 <div class="sla6">
-    <img src="/fotos/cachorros.png" alt="dois cachorros de caderira de rodas">
+    <img src="./fotos/cachorros.png" alt="dois cachorros de caderira de rodas">
 </div>
 
    </section>
